--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "aether-renderer-core"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Sacred CLI to convert image sequences into transparent WebM/MP4 videos"
 license = "MIT"
 authors = ["Siria <siria@sacred-ai.com>"]
 homepage = "https://sacred-ai.com/about/aetherrenderer"
 repository = "https://github.com/madspaaskesen/aether-renderer-core"
+readme = "README.md"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
