📖 Bump to 0.1.5 with proper README and docs link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aether-renderer-core"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 description = "A sacred Rust-based CLI for rendering transparent WebM/MP4/GIF from PNG sequences"
 license = "MIT"
@@ -8,6 +8,7 @@ authors = ["Siria <siria@sacred-ai.com>"]
 homepage = "https://sacred-ai.com/about/aetherrenderer"
 repository = "https://github.com/madspaaskesen/aether-renderer-core"
 readme = "README.md"
+documentation = "https://docs.rs/aether-renderer-core"
 include = [
     "src/**",
     "Cargo.toml",
