--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ include = [
     "README.md",
     "LICENSE"
 ]
+exclude = ["Cargo.toml.orig"]
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
