--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,17 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             ext: ""
+            name: linux-x86_64
+
           - os: macos-latest
             target: x86_64-apple-darwin
             ext: ""
+            name: macos-x86_64
+
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             ext: ".exe"
+            name: windows-x86_64
 
     steps:
       - name: Checkout repository
@@ -38,9 +43,15 @@ jobs:
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
+      - name: Rename binary
+        run: |
+          mkdir -p dist
+          cp target/${{ matrix.target }}/release/aether-renderer-core${{ matrix.ext }} \
+            dist/aether-renderer-core-${{ github.ref_name }}-${{ matrix.name }}${{ matrix.ext }}
+
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
-          files: target/${{ matrix.target }}/release/aether-renderer-core${{ matrix.ext }}
+          files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
