--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,13 @@ include = [
 ]
 exclude = ["Cargo.toml.orig"]
 
+[lib]
+name = "aether_renderer_core"
+path = "src/lib.rs"
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 zip = "0.6"
 tempfile = "3.8"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
