--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,19 +46,19 @@ jobs:
       - name: Package Linux Binary
         if: runner.os == 'Linux'
         run: |
-          cp target/release/aether-renderer-core .
+          cp target/${{ matrix.target }}/release/aether-renderer-core .
           zip aether-renderer-core-${{ github.ref_name }}-linux-x86_64.zip aether-renderer-core
 
       - name: Package macOS Binary
         if: runner.os == 'macOS'
         run: |
-          cp target/release/aether-renderer-core .
+          cp target/${{ matrix.target }}/release/aether-renderer-core .
           zip aether-renderer-core-${{ github.ref_name }}-macos-x86_64.zip aether-renderer-core
 
       - name: Package Windows Binary
         if: runner.os == 'Windows'
         run: |
-          cp target/release/aether-renderer-core.exe .
+          cp target/${{ matrix.target }}/release/aether-renderer-core.exe .
           7z a aether-renderer-core-${{ github.ref_name }}-windows-x86_64.zip aether-renderer-core.exe
 
       - name: Rename binary
