--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,23 +43,31 @@ jobs:
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
+      - name: Prepare release directory
+        run: |
+          mkdir -p dist
+          cp README.md dist/
+          cp LICENSE dist/
+          cp SUPPORT.md dist/
+          cp -r examples/ dist/
+
       - name: Package Linux Binary
         if: runner.os == 'Linux'
         run: |
-          cp target/${{ matrix.target }}/release/aether-renderer-core .
-          zip aether-renderer-core-${{ github.ref_name }}-${{ matrix.name }}.zip aether-renderer-core
+          cp target/${{ matrix.target }}/release/aether-renderer-core dist/
+          zip -r aether-renderer-core-${{ github.ref_name }}-${{ matrix.name }}.zip dist/*
 
       - name: Package macOS Binary
         if: runner.os == 'macOS'
         run: |
-          cp target/${{ matrix.target }}/release/aether-renderer-core .
-          zip aether-renderer-core-${{ github.ref_name }}-${{ matrix.name }}.zip aether-renderer-core
+          cp target/${{ matrix.target }}/release/aether-renderer-core dist/
+          zip -r aether-renderer-core-${{ github.ref_name }}-${{ matrix.name }}.zip dist/*
 
       - name: Package Windows Binary
         if: runner.os == 'Windows'
         run: |
-          cp target/${{ matrix.target }}/release/aether-renderer-core.exe .
-          7z a aether-renderer-core-${{ github.ref_name }}-windows-x86_64.zip aether-renderer-core.exe
+          cp target/${{ matrix.target }}/release/aether-renderer-core.exe dist/
+          7z a aether-renderer-core-${{ github.ref_name }}-windows-x86_64.zip dist/*
 
       - name: Rename binary
         shell: bash
