--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ include = [
     "README.md",
     "LICENSE"
 ]
-exclude = ["Cargo.toml.orig"]
+exclude = ["*.DS_Store","Cargo.toml.orig"]
 
 [lib]
 name = "aether_renderer_core"
