more exclude of mac files.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ include = [
     "LICENSE"
 ]
 exclude = [
-    "*.DS_Store",
+    ".DS_Store",
+    ".*.DS_Store",
     "dist/",
     "release-*",
     "*.zip",
